Bug 407982 - "More events should walk the Gdk tree instead of being dropped" [p=ventnor.bugzilla@yahoo.com.au (Michael Ventnor) r+sr=roc a1.9=schrep]