widget/src/gtk2/nsCommonWidget.cpp
@@ -75,37 +75,6 @@ nsCommonWidget::CommonCreate(nsIWidget *aParent, PRBool aListenForResizes)
 }
 
 void
-nsCommonWidget::InitButtonEvent(nsMouseEvent &aEvent,
-                                GdkEventButton *aGdkEvent)
-{
-    aEvent.refPoint.x = nscoord(aGdkEvent->x);
-    aEvent.refPoint.y = nscoord(aGdkEvent->y);
-
-    aEvent.isShift   = (aGdkEvent->state & GDK_SHIFT_MASK)
-        ? PR_TRUE : PR_FALSE;
-    aEvent.isControl = (aGdkEvent->state & GDK_CONTROL_MASK)
-        ? PR_TRUE : PR_FALSE;
-    aEvent.isAlt     = (aGdkEvent->state & GDK_MOD1_MASK)
-        ? PR_TRUE : PR_FALSE;
-    aEvent.isMeta    = (aGdkEvent->state & GDK_MOD4_MASK)
-        ? PR_TRUE : PR_FALSE;
-
-    aEvent.time = aGdkEvent->time;
-
-    switch (aGdkEvent->type) {
-    case GDK_2BUTTON_PRESS:
-        aEvent.clickCount = 2;
-        break;
-    case GDK_3BUTTON_PRESS:
-        aEvent.clickCount = 3;
-        break;
-        // default is one click
-    default:
-        aEvent.clickCount = 1;
-    }
-}
-
-void
 nsCommonWidget::InitKeyEvent(nsKeyEvent &aEvent, GdkEventKey *aGdkEvent)
 {
     aEvent.keyCode   = GdkKeyCodeToDOMKeyCode(aGdkEvent->keyval);
